Fix style on firefox

--- a/media/theme/style.css
+++ b/media/theme/style.css
@@ -82,7 +82,7 @@ ul, ol {
 
 #menu {
 	float: right;
-  margin-top: 15px;
+  margin-top: 10px;
 }
 
 #menu .item {
